Adding Tipsy, little interface changes

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,4 +1,3 @@
-<%= @donation_project_name %>
 
 <%= form_for :donation, url: donations_path do |f| %>
 
@@ -12,7 +11,7 @@
       <div class="hint"><%= f.label(:project_name, 'ie. Wikipedia, Redd Cross, UNR') %></div>
     </div>
 
-    <div class="track_don_quantity">
+    <div class="track_don_quantity" style="display: none">
       <%= f.text_field :quantity, placeholder: '125' %>
       <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
     </div>
@@ -22,7 +21,19 @@
 
     <div class="track_don_date">
       <%= f.date_field :date %>
-      <div class="hint"><%= f.label(:date, t('when_question')) %></div>
+      <div class="hint"><%= f.label(:date, t('when_did_you_donate')) %></div>
+    </div>
+
+    <div class="track_don_quantity_B" >
+      <div class="track_don_quantity_B_option">
+        <%= f.text_field :quantity, placeholder: '125' %>
+        <div class="track_don_quantity_B_option_hint">
+          <%= f.check_box :quantity_privacy %>
+          <%= f.label(:quantity_privacy, t('donations.keep_the_quantity_private'), title: 'Wadus') %>
+
+        </div>
+      </div>
+      <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
     </div>
 
   </div>
@@ -30,7 +41,11 @@
   <div class="track_don_options">
 
     <div>
-      <label><input type="checkbox" name="i_want_to_explain"> <%= t('i_want_to_explain_why') %></label>
+      <label><input type="checkbox" name="i_want_to_explain" id="i_want_to_explain"> <%= t('i_want_to_explain_why') %></label>
+      <div id="i_want_to_explain_content">
+        <%= f.text_area(:comment) %>
+      </div>
+      
     </div>
 
     <div>
