--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -53,7 +53,7 @@
   
 
 
-  <h2><%= t 'did_you_track' %> </h2>
+  <h2><%= t 'projects.did_you_track' %> </h2>
   
   <%= form_for([@project, @project.donations.build]) do |f| %>
     <%= render 'donations/form' %>
