--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,7 +1,7 @@
 
 	<section class="content_column">
 
-    <h1>Últimas donaciones</h1>
+    <h1><%= t 'last_donations' %></h1>
 
     <%= render @donations %>
 
