--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -32,9 +32,9 @@
 				</header>
 
 				<%# form_for :donation, url: donations_path, html: {class: "simple_form"} do |f| %>
-        <%= form_for :donation, url: donations_path do |f| %>
+        <%# form_for :donation, url: donations_path do |f| %>
           <%= render 'donations/form' %>
-        <% end %>
+        <%# end %>
 
 			</div>
 
