--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -29,7 +29,7 @@
         <%= f.text_field :quantity, placeholder: '125' %>
         <div class="track_don_quantity_B_option_hint">
           <%= f.check_box :quantity_privacy %>
-          <%= f.label(:quantity_privacy, t('donations.keep_the_quantity_private'), title: 'Wadus') %>
+          <%= f.label(:quantity_privacy, t('donations.keep_the_quantity_private'), title: "Don't be shy sharing the quantity. Everyone donates what they can / feels is right. So even a penny would be good. On the other hand, it would be fun to study how individual behaviours influence others... for good or for bad!", class: 'tipsit') %>
 
         </div>
       </div>
@@ -48,9 +48,9 @@
       
     </div>
 
-    <div>
+    <!-- <div>
       <label><input type="checkbox" name="i_want_to_keep_private"> <%= t 'i_want_to_keep_private' %></label>
-    </div>
+    </div> -->
 
   </div>
 
