--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
 	<meta name=viewport content="width=device-width,initial-scale=1">
 	
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
@@ -30,7 +32,8 @@ a.button { text-decoration: none; }
 
 /* fonts */
 body { font-weight: 400; font-size: 1em; font-family: 'Raleway', Arial, sans-serif; overflow: hidden; overflow-y: scroll; min-height: 590px;color: #565631;}
-input[type='submit'], textarea { font-family: 'Raleway', Arial, sans-serif; }
+input[type='submit'], textarea, button { font-family: 'Raleway', Arial, sans-serif; }
+body .tipsy { font-size: 11px; }
 
 /* structure */
 #container { margin: 2em auto; width: 800px; border-width: 30px; border-style: solid; }
@@ -86,7 +89,7 @@ h2 { font-size: 24px; }
 .track_don_project, .track_don_quantity, .track_don_date { display: inline-block; }
 .track_don_project { width: 378px; margin-right: 10px; margin-bottom: 20px;}
 .track_don_quantity { width: 90px; margin-right: 10px; }
-.track_don_quantity_B { width: 100%; margin-right: 10px; }
+.track_don_quantity_B { width: 100%; margin-right: 10px; margin-bottom: 20px;}
 .main_form .track_don_quantity_B input { width: 90px; margin: 0;}
 .track_don_quantity_B_option { background: #D5D7A3; margin-bottom: 4px; }
 .track_don_quantity_B_option .hint { display: inline-block; }
@@ -102,11 +105,11 @@ h2 { font-size: 24px; }
 #i_want_to_explain_content textarea { width: 94%; height: 100px; font-size: 13px; padding-top: 10px; margin: 10px 0;}
 
 #project { margin-top: 30px; overflow: hidden; }
-#project .meta { width: 42%; float: left; padding: 2% 4%; }
+#project .meta { width: 42%; float: left; padding: 2% 4%; font-size: 12px; }
 #project .actions { width: 42%; float: right; padding: 0 4%; }
-#project h1 { font: bold 36px Arial; margin: 10px 0;}
-#project .description { margin: 0 0 40px 0; }
-#project .meta ul { margin: 0; padding: 0;}
+#project h1 { font-size: 36px; margin: 10px 0;}
+#project .description { margin: 0 0 40px 0; font-size: 12px }
+#project .meta ul { margin: 0; padding: 0; ;}
 #project .meta li { list-style-type: none; margin: 0 0 10px 0;}
 #project .actions div { margin: 0 0 10px 0;}
 #project .actions p { margin: 0;}
@@ -118,9 +121,9 @@ h2 { font-size: 24px; }
 .project a { display: block;}
 
 .donation { border-top-width: 1px; border-top-style: solid; padding-top: 10px; margin-bottom: 35px; position: relative;}
-.donation h2 { font-size: 14px; color: #666; margin: 0 ;}
+.donation h2 { font-size: 18px; color: #666; margin: 0 ;}
 .donation .tags a { display: inline-block; font-size: 11px; font-weight: normal; color: #666; text-decoration: none; background: #F3E9D1; padding: 2px; margin: 0 6px 0 0;}
-.donation_comment { margin: 5px 0;}
+.donation_comment { margin: 15px 0;}
 #donation_do_widget { position: absolute; top: 10px; right: 0; width: 150px; text-align: right; }
 #donation_do_widget .donation_number { padding: 4px 10px; font-size: 12px; display: inline-block; background: #D9DAAA; }
 #donation_do_widget .donation_do { display: inline-block; }
@@ -198,6 +201,7 @@ iPad 3
 	#main_content { margin-top: 0; margin-bottom: 10%; }
 	.content_column, .alert { padding-left: 5%; padding-right: 5%; }
 	.content_full {  }
+	.long_text { width: auto;}
 	
 }
 
@@ -253,9 +257,11 @@ iPad 3
 				
 			</ul>
 		</section>
+
+		<!-- ignoring until fix https://github.com/furilo/trackdons/issues/1
 		<section id="nav_mobile">
-			<div class="hamburger sb-toggle-left"></div>
-		</section>
+			<div class="fa fa-bars sb-toggle-left"></div>
+		</section> -->
 	</section>
 
 	<section id="main_content">
