New UI for the Donation Form (not yet happy)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,24 +84,23 @@ h2 { font-size: 24px; }
 #login_if_you_already a { text-decoration: none; color: #97A732; }
 
 .main_form input, #i_want_to_explain_content textarea, .track_don_project_name { padding: 4px 8px; font-size: 24px; height: 32px; border: 1px dashed #7C9200; margin-bottom: 4px; font-family: 'Raleway', Arial, sans-serif; font-weight: bold}
+.track_don_project_name { border: 1px dashed #7C9200 ;}
 
-
-.main_form sel
 .main_form { clear: both; margin: 0 0 20px 0;}
 .track_don_project, .track_don_quantity, .track_don_date { display: inline-block; }
-.track_don_project { width: 378px; margin-right: 10px; margin-bottom: 20px;}
+.track_don_project { width: 540px; margin-bottom: 20px;}
 .track_don_quantity { width: 90px; margin-right: 10px; }
-.track_don_quantity_B { width: 100%; margin-right: 10px; margin-bottom: 20px;}
+.track_don_quantity_B { width: 375px; margin-bottom: 20px; float: right; }
 .main_form .track_don_quantity_B input { width: 90px; margin: 0;}
 .track_don_quantity_B_option { background: #D5D7A3; margin-bottom: 4px; }
 .track_don_quantity_B_option .hint { display: inline-block; }
 .main_form .track_don_quantity_B_option_hint { display: inline-block; width: auto; font-size: 12px; vertical-align: top; padding: 6px 0 0 0;}
 .main_form .track_don_quantity_B_option_hint input { vertical-align: middle; margin: -1px 8px 0 12px; width: auto}
-.track_don_date { width: 130px; }
+.track_don_date { width: 130px; float: left; margin-right: 20px;}
 .track_don_project input { width: 96%; }
 .track_don_quantity input { width: 74px; }
 .track_don_date input { width: 100%; font-size: 12px;}
-.track_don_options { margin: 0 0 20px 0;}
+.track_don_options { margin: 0 0 20px 0; clear: both;}
 .hint { font-size: 12px}
 #i_want_to_explain_content { display: none; }
 #i_want_to_explain_content textarea { width: 94%; height: 100px; font-size: 13px; padding-top: 10px; margin: 10px 0;}
