--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,7 +25,7 @@
     <section class="actions">
       <div>
         <p><%= t('projects.have_you_donated') %></p>
-        <button>TrackDon</button>
+        <a href="#track_donation" class="button">TrackDon</a>
       </div>
       <div>
         <p><%= t('projects.do_you_want_to_actually_donate') %></p>
