--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -29,7 +29,7 @@
   <p>Currently not. Hey we could even ask for donations! But actually this is only a learning excercise in computer programming, and a kind of experiment to see if this idea even makes any sense.</p>
 
   <h3>Who is behind TrackDons?</h3>
-  <p>Me.</p>
+  <p>Me. And I hope that soon, also you.</p>
 
   <h3>Can I export my data?</h3>
   <p>You will (I haven't got time to do it yet, but my plan is to expose that info so you other applications can consume it, as well as you being able to export a CSV). Want to help?</p>
