Country added for User model (with i18n)

--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -6,12 +6,12 @@
     </h1>
 
     <div id="donations_last_month">
-      <%= @user.donations.where('date >= ?', 1.month.ago).sum(:quantity) %> donated 
+      <%= @user.donations.where('date >= ?', 1.month.ago).sum(:quantity_cents) %> donated 
       <small>in the last month</small>
     </div>
 
     <div id="donations_overall">
-      <%= @user.donations.sum(:quantity) %> in total 
+      <%= @user.donations.sum(:quantity_cents) %> in total 
     </div>
 
   </header>
