--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -22,8 +22,8 @@
     </div>
 
     <div class="track_don_quantity" style="display: none">
-      <%= f.text_field :quantity, placeholder: '125' %>
-      <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
+      <%= f.text_field :quantity_cents, placeholder: '125' %>
+      <div class="hint"><%= f.label(:quantity_cents, t('how_much_question')) %></div>
     </div>
 
     <%# f.label :currency %>
@@ -36,14 +36,14 @@
 
     <div class="track_don_quantity_B" >
       <div class="track_don_quantity_B_option">
-        <%= f.text_field :quantity, placeholder: '125' %>
+        <%= f.text_field :quantity_cents, placeholder: '125' %>
         <div class="track_don_quantity_B_option_hint">
           <%= f.check_box :quantity_privacy %>
           <%= f.label(:quantity_privacy, t('donations.keep_the_quantity_private'), title: "Don't be shy sharing the quantity. Everyone donates what they can / feels is right. So even a penny would be good. On the other hand, it would be fun to study how individual behaviours influence others... for good or for bad!", class: 'tipsit') %>
 
         </div>
       </div>
-      <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
+      <div class="hint"><%= f.label(:quantity_cents, t('how_much_question')) %></div>
     </div>
 
   </div>
