--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,26 +21,27 @@
 @import "http://fonts.googleapis.com/css?family=Raleway:400,700";
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css";
 
-
+$main_color: #7C9200;
+$secondary_color: #565631;
 
 /* colors */
 body { background: #F3E9D1; }
 body .sb-site-container { background-color: transparent; }
-#logo { background: #565631; }
+#logo { background: $secondary_color; }
 
 #container { background: #F8F2E3; border-color: #E4D6B3; }
-#header { background: #7C9200; color: #FFF; }
+#header { background: $main-color; color: #FFF; }
 #header a { color: #FFF; }
-button, .button, input[type='submit'] { background: #7C9200; color: #FFF; }
+button, .button, input[type='submit'] { background: $main-color; color: #FFF; }
 a.button { text-decoration: none; }
 .content_full { background: #EBE8CC; }
-#track_donation header h2, h1 { border-color: #7C9200; color: #7C9200; }
+#track_donation header h2, h1 { border-color: $main-color; color: $main-color; }
 #project .meta { background: #EBE8CC; }
 .donation { border-top-color: #D9DAAA;}
 .user_page header, #first_donation_pending { background: #EBE8CC; }
 
 /* fonts */
-body { font-weight: 400; font-size: 1em; font-family: 'Raleway', Arial, sans-serif; overflow: hidden; overflow-y: scroll; min-height: 590px;color: #565631;}
+body { font-weight: 400; font-size: 1em; font-family: 'Raleway', Arial, sans-serif; overflow: hidden; overflow-y: scroll; min-height: 590px;color: $secondary-color;}
 input[type='submit'], textarea, button, .ui-autocomplete { font-family: 'Raleway', Arial, sans-serif; }
 body .tipsy { font-size: 11px; }
 
@@ -73,7 +74,7 @@ form.simple_form textarea { height: 100px; }
 .pages_index #logo { display: none; }
 #logo { position: absolute; top: 0; width: 100px; height: 100%; text-align: center; vertical-align: middle; font-weight: 700}
 #logo a { display: block; padding: 12px 8px; font-size: 13px; text-decoration: none; text-transform: uppercase; }
-h1.logo { background: #565631; text-transform: uppercase; display: inline-block; padding: 8px 16px; color: #FFF; font-size: 24px; font-weight: normal; }
+h1.logo { background: $secondary-color; text-transform: uppercase; display: inline-block; padding: 8px 16px; color: #FFF; font-size: 24px; font-weight: normal; }
 h1 { font-size: 32px; }
 h2 { font-size: 24px; }
 #header { font-size: 14px;}
@@ -93,8 +94,8 @@ h2 { font-size: 24px; }
 #login_if_you_already { position: absolute; top: 2px; right: 0; }
 #login_if_you_already a { text-decoration: none; color: #97A732; }
 
-.main_form input, #i_want_to_explain_content textarea, .track_don_project_name { padding: 4px 8px; font-size: 24px; height: 32px; border: 1px dashed #7C9200; margin-bottom: 4px; font-family: 'Raleway', Arial, sans-serif; font-weight: bold}
-.track_don_project_name { border: 1px dashed #7C9200; overflow: hidden;}
+.main_form input, #i_want_to_explain_content textarea, .track_don_project_name { padding: 4px 8px; font-size: 24px; height: 32px; border: 1px dashed $main-color; margin-bottom: 4px; font-family: 'Raleway', Arial, sans-serif; font-weight: bold}
+.track_don_project_name { border: 1px dashed $main-color; overflow: hidden;}
 
 .main_form { clear: both; margin: 0 0 20px 0;}
 .track_don_project, .track_don_quantity, .track_don_date { display: inline-block; }
@@ -140,7 +141,6 @@ h2 { font-size: 24px; }
 #donation_do_widget .donation_do { display: inline-block; }
 #donation_do_widget .button { padding: 4px 10px; font-size: 12px; margin: 0; }
 
-
 .long_text { width: 500px; font-size: 14px; }
 .long_text p { line-height: 22px; }
 
@@ -155,7 +155,7 @@ h2 { font-size: 24px; }
 #user_nav { margin: 20px 0;}
 #edit_your_profile { float: right; }
 
-.ui-autocomplete { border: 1px solid red; font-family: }
+.ui-autocomplete { border: 1px solid red; }
 
 #first_donation_pending { padding-top: 1em; padding-bottom: 1em; margin-bottom: 2em; }
 
