Putting the language selector in a better (not definitive) place

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,8 +72,9 @@
 		<div class="language_selector">
 			<%= t('choose_your_language') %>:
 			<% available_locales.each do |locale_link| %>
-	      <%= locale_link %>
+	      <%= locale_link %> ·
 	    <% end %>
+	    <p class="contrib"><%= link_to t('want_to_contribute_your_own_language'), 'https://github.com/furilo/trackdons/wiki/Contribute-your-language' %></p>
 		</div>
 
 	</section>
@@ -106,7 +107,8 @@
 	<p>Just a line of text to demonstrate the overlay effect.</p>
 </div>
 
-<%= "Locale: #{I18n.locale}" %>
+
+<%= "Locale: #{I18n.locale}" if Rails.env.development? %>
 <%# debug(request) if Rails.env.development? %>
 <%= debug(params) if Rails.env.development? %>
 <%= debug(cookies) if Rails.env.development? %>
