--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -19,16 +19,7 @@
     </h2>
     
 
-    <div id="donation_do_widget">
-      <% unless params[:controller] == 'projects' && params[:action] == 'show' %> 
-        <div class="donation_number">
-          <%= donation.project.donations.count %>
-        </div>
-      <% end %>
-      <div class="donation_do">
-        <%= link_to 'TrackDon', projects_url, class: 'button', title: 'Track a Donation for this project' %>
-      </div>
-    </div>
+    <%= render :partial => 'donations/donation_do_widget', :locals => {:donation => donation} %>
 
     <div class="donation_comment">
       <%= donation.comment %>
