--- a/app/views/donations/_donation_do_widget.html.erb
+++ b/app/views/donations/_donation_do_widget.html.erb
@@ -5,6 +5,6 @@
     </div>
   <% end %>
   <div class="donation_do">
-    <%= link_to 'TrackDon', projects_url, class: 'button', title: 'Track a Donation for this project' %>
+    <%= link_to 'TrackDon', projects_url, class: 'button', title: t('donations.donation_do_widget.link_title') %>
   </div>
 </div>
