Showing tipsy.gif

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -161,6 +161,10 @@ h2 { font-size: 24px; }
 
 #footer { text-align: center; font-size: 12px }
 
+//Overwriting image for asset_pipeline -> there is probably a better way
+.tipsy .tipsy-arrow { background-image: url(image_path('tipsy.gif')) !important }
+
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 /* Styles */
