Instantiate as new function every time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 </head>
 <body class="<%= params[:controller] + ' ' + params[:controller] + '_' + params[:action]  %>">
 
-<div class="sb-site-container">
+<div id="sb-site" class="sb-site-container">
 	<div id="container" >
 
 		<section id="header">
@@ -45,10 +45,10 @@
 				</ul>
 			</section>
 
-			<!-- ignoring until fix https://github.com/furilo/trackdons/issues/1
-			<section id="nav_mobile">
-				<div class="fa fa-bars sb-toggle-left"></div>
-			</section> -->
+      <!-- ignoring until fix https://github.com/furilo/trackdons/issues/1 -->
+      <section id="nav_mobile">
+        <div class="fa fa-bars sb-toggle-left"></div>
+      </section>
 		</section>
 
 		<section id="main_content">
