Hacky solution to 'create project from autocomplete'

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -10,7 +10,7 @@
           <%= @project.name %>
         </div>
       <% else %>
-        <%= f.autocomplete_field :project_name, autocomplete_project_name_projects_path, :id_element => '#donation_project_id',  placeholder: 'Project', :"data-autocomplete-label" => "Sorry, nothing found." %>
+        <%= f.autocomplete_field :project_name, autocomplete_project_name_projects_path, :id_element => '#donation_project_id',  placeholder: 'Project', :'data-autocomplete-label' => 'Add this project...' %>
       <% end %>
 
       <% if params[:controller] == 'projects' %> 
@@ -56,10 +56,6 @@
       </div>
       
     </div>
-
-    <!-- <div>
-      <label><input type="checkbox" name="i_want_to_keep_private"> <%= t 'i_want_to_keep_private' %></label>
-    </div> -->
 
   </div>
 
